# silicon-snooper

./: CMakeLists.txt  hardware_readout.c  main.c  silicon-snooper  snooper
gui/: gui_bridge.c  gui_bridge.h  gui_main.m  gui_ringbuffer.c  gui_ringbuffer.h  gui_telemetry_bridge.c  gui_telemetry_bridge.h  gui_view.h  gui_view.m
include/: cpu.h  deviceinfo.h  output_mode.h  telemetry_cpu.h  telemetry_gpu.h  util.h
include/snooper/: cpu.h  errors.h  gpu.h  system_info.h  system_metrics.h  telemetry.h
src/: cpu.c  deviceinfo.c  main.c  telemetry_cpu.c  telemetry_gpu.c  util.c
src/cli/: cli_args.c  cli_args.h  cli_format_json.c  cli_format_json.h  cli_format_table.c  cli_format_table.h  main_cli.c
src/core/: cpu.c  gpu.c  system_info.c  system_metrics.c  telemetry.c  timeutil.c  timeutil.h
